Mon May 27 10:09:24 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.0 released.

Tue May 21 17:24:39 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added a forward declared enum after it has been declared

Mon May 20 18:40:20 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_16_Test.cpp:
          Added also a forward declared enum

Fri May 17 13:48:34 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:

          Updated regex for finding logging macros.

Fri May 17 09:32:04 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/tests.mpc:
          Add NOMINMAX to macros for compiler features test 16/17

Fri May 17 09:26:22 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_19_Test.cpp:
          Added missing include

Thu May 16 17:52:36 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * ace/Select_Reactor_T.cpp:

          If a handler has to be removed by check_handles(),
          also remove it from the three masks in the wait_set_.

        * ace/Handle_Set.inl:
        * ace/OS_NS_unistd.inl:
        * ace/config-vxworks6.9.h:
        * bin/PerlACE/ProcessVX.pm:
        * tests/Log_Msg_Test.cpp:

          Updated for port to 64-bit VxWorks 6.9 (x86 RTP static).

        * bin/fuzz.pl:

          Updated check for logging macros for the case
          where the current directory is ACE_ROOT.

Mon May 13 17:27:37 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        Merging from branch OCI_Asynch_IMR:
        Wed May  8 21:42:24 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Countdown_Time_T.cpp:
        * ace/Countdown_Time_T.h:

          Make the countdown time instances nestable. Prior to this change,
          if a function using the countdown time to subtract a duration
          happened to call another function that also used a countdown time