@@ -1,5 +1,10 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.2.0 and ACE-6.2.1
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.9 and ACE-6.2.0
 ====================================================
+
+. None
 
 USER VISIBLE CHANGES BETWEEN ACE-6.1.8 and ACE-6.1.9
 ====================================================
